[vanilla-0.0.10] * Bug fix   - Worked on Chrome Desktop Mobile Preview, but not on an Android     phone. Viewport size and scale is locked, and desktop overflow     has been hidden. This prevents unwanted scrolling. * TODO   - Create bounding box for desktop windows when screen size     changes
	modified:   taskbar.html
	modified:   web-window.css

--- a/web-window.css
+++ b/web-window.css
@@ -218,6 +218,7 @@
   bottom: 0;
   left: 0;
   right: 0;
+  overflow: hidden;
 }
 
 #web-window-main-menu {
